# Estructuras-de-Datos-Avanzadas

./: Persistence_Segment_Tree.cpp  README.md  matrix_chain_multiplication.cpp  z_order.cpp  z_order_2.cpp  z_order_3.cpp  z_order_v1.cpp
DbscanAlgorithm/: CMakeLists.txt  dbscan.cpp  dbscan.h  main.cpp
Dbscan_V1/: CMakeLists.txt  DbScan.h  main.cpp
Examen final/: main_4pts.cpp  readme.md
K-means Algorithm/: CMakeLists.txt  main.cpp  minidataset.txt
K_means_V0/: CMakeLists.txt  main.cpp
K_means_V1/: CMakeLists.txt  KmeansCode.h  main.cpp
Laboratorio/: Ejercicio_1.cpp
Laboratorio 1/: Archivos del lab 1.txt  Dynamic_vectors.cpp  Fixed_size_vectors.cpp  Modular_programming.cpp  Object_oriented_programming.cpp
Laboratorio 2/: Abstract_Data_Types.cpp  Design_Patterns.cpp  Namespaces.cpp  Reducing_code_size_through_pointers.cpp  lab2.txt
Laboratorio 3/: Ejercicio_1.cpp
Laboratorio 4/: quadtree.cpp
Laboratorio 5/: Main.cpp  Shapes.h  r_tree_pipipi.cpp
Proyecto_Final_BLink/: b_link.hpp  main.cpp  readme.md
R-Tree/: rtree.hpp
b-link/: CMakeLists.txt  README.md
b-link/source/: b-link.hpp  main.cpp
